Fix Themes step horizontal scroll

--- a/client/signup/steps/theme-selection/style.scss
+++ b/client/signup/steps/theme-selection/style.scss
@@ -27,3 +27,9 @@
 	}
 }
 
+/**
+ * Fixes Pressable sub-step width
+ */
+.theme-selection__pressable-substep-wrapper {
+	position: relative;
+}
